# Projeto_AEDA1920

./: CMakeLists.txt  Convocatoria.cpp  Convocatoria.h  Date.cpp  Date.h  Equipamentos.cpp  Equipamentos.h  Estatistica.cpp  Estatistica.h  Jogadores.cpp  Jogadores.h  Jogo.cpp  Jogo.h  Jogo.txt  Menus.cpp  Menus.h  README.md  Selecao.cpp  Selecao.h  Utils.cpp  Utils.h  bst.h  convocatorias.txt  equipatecnica.txt  fornecedores.txt  jogadores.txt  main.cpp  selecionadores.txt
documentacao/: Doxyfile
documentacao/html/: _convocatoria_8h_source.html  _date_8h_source.html  _equipamentos_8h_source.html  _estatistica_8h_source.html  _jogadores_8h_source.html  _jogo_8h_source.html  _menus_8h_source.html  _selecao_8h_source.html  _utils_8h_source.html  annotated.html  bst_8h_source.html  class_b_s_t-members.html  class_b_s_t.html  class_b_s_t_itr_in-members.html  class_b_s_t_itr_in.html  class_b_s_t_itr_level-members.html  class_b_s_t_itr_level.html  class_b_s_t_itr_post-members.html  class_b_s_t_itr_post.html  class_b_s_t_itr_pre-members.html  class_b_s_t_itr_pre.html  class_binary_node-members.html  class_binary_node.html  class_convocatoria-members.html  class_convocatoria.html  class_convocatoria_ja_existente-members.html  class_convocatoria_ja_existente.html  class_date-members.html  class_date.html  class_equipa_tecnica-members.html  class_equipa_tecnica.html  class_equipamentos-members.html  class_equipamentos.html  class_fornecedores-members.html  class_fornecedores.html  class_funcionario_nao_existente-members.html  class_funcionario_nao_existente.html  (+66 more)
(+89 files in other folders)
