cmake_minimum_required(VERSION 3.15)
project(projeto)

set(CMAKE_CXX_STANDARD 14)

add_executable(projeto
        main.cpp
        Estatistica.cpp
        Convocatoria.cpp
        Date.cpp
        Jogadores.cpp
        Jogo.cpp
        Selecao.cpp
        Utils.cpp
        Menus.cpp
        Equipamentos.cpp
        )